# Localization-aware_planning

./: .clang-format  ClangFormat.py  README.md  lzh_exp1.sh  remove_intermediate_file.sh  start.sh  start_record_zsh.sh  start_zsh.sh
APACE/: .gitignore  settings.json  start.sh  start_zsh.sh
APACE/RMUA_controller/px4ctrl/: package.xml
APACE/active_perception/src/: heading_planner.cpp  yaw_graph_utils.cpp
APACE/airsim_ctrl/config/: test.rviz
APACE/airsim_ctrl/include/: CtrlFSM.h  hovthrkf.h  input.h
APACE/airsim_ctrl/launch/: ctrl_md_exploration.launch
APACE/airsim_ctrl/src/: CtrlFSM.cpp  CtrlParam.cpp  Ctrl_node.cpp  controller.cpp  hovthrkf.cpp
APACE/airsim_ros_wrapper/: CMakeLists.txt
APACE/airsim_ros_wrapper/include/: airsim_ros_wrapper.h
APACE/airsim_ros_wrapper/src/: airsim_node.cpp  airsim_ros_wrapper.cpp
APACE/map_publisher/: CMakeLists.txt
APACE/map_publisher/data/: map.pcd
APACE/map_publisher/launch/: map_publisher_bag.launch
APACE/param_identification/: CMakeLists.txt  package.xml
APACE/param_identification/config/: frame_trans.yaml  visual.rviz
APACE/param_identification/launch/: pub_unique_traj.launch
APACE/param_identification/src/: pub_trigger.cpp  pub_unique_traj.cpp
APACE/pathfinding/src/: astar.cpp  kinodynamic_astar.cpp  topo_prm.cpp
APACE/plan_env/src/: edt_environment.cpp
APACE/plan_manage/: CMakeLists.txt  package.xml
APACE/plan_manage/config/: test.rviz  test_circle.rviz  test_orb.rviz  test_orbandvins.rviz  traj.rviz
APACE/plan_manage/launch/: agile_planner_airsim.launch  algorithm.xml  bag_record_vins_orb_airsim.launch  circle_fly_msg.launch  orb_tra_pub_rviz.launch  vins_tra_pub_rviz.launch
APACE/plan_manage/script/: Bspline_pubilsher.py  circle_trajectory_publisher copy.py  circle_trajectory_publisher.py  cloud_num_draw.py  differnce_show.py  error_and_score_show_per_feature.py  lzh_exp1.py  picture_score_compute.py  point_cloud_difference.py  pub_cloud_through_depth.py  show_pts_eigen_change.py  show_pts_eigen_ditribution.py  test1.py  test2.py  trajectory_publisher.py  trajectory_publisher_with_triggle.py  vins_error_output_show.py  visual_traj_pub.py
APACE/plan_manage/src/: agile_perception_fsm.cpp  fast_planner_node.cpp  planner_manager.cpp  traj_server.cpp  traj_server_node.cpp  yaw_graph_utils.cpp  yaw_initial_planner.cpp
APACE/trajectory/include/: parallax_util.h
APACE/trajectory/src/: parallax_util.cpp  traj_visibility.cpp
APACE/uav_utils/map_publisher/: CMakeLists.txt  package.xml
APACE/uav_utils/quadrotor_msgs/: CMakeLists.txt
APACE/utils/include/: tic_toc.h
APACE/utils/script/: test_draw_trajectory.py
APACE/voxel_mapping/: CMakeLists.txt  package.xml
APACE/voxel_mapping/data/: features_center_downsampled_0.6.pcd
APACE/voxel_mapping/src/: esdf.cpp  feature_grid.cpp  feature_map.cpp  map_server.cpp  occupancy_grid.cpp  tsdf.cpp
Util/lidar_converter/: CMakeLists.txt  package.xml
VINS-Fusion/result/: features_data.csv  start_vins_signal.txt
VINS-Fusion/vins_estimator/: CMakeLists.txt  package.xml
controller/RMUA_controller/px4ctrl/: CMakeLists.txt  model_set.sh
controller/RMUA_controller/px4ctrl/include/: controller.h  input.h
controller/RMUA_controller/px4ctrl/launch/: run_ctrl.launch
controller/RMUA_controller/px4ctrl/model/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  nmpc_model_generate.cpp
controller/RMUA_controller/px4ctrl/model/dynamic_optimize/: CMakeCache.txt  CMakeLists.txt  acado_qpoases_interface.cpp  acado_solver.c  cmake_install.cmake  make_acado_solver_sfunction.m  test.cpp
controller/RMUA_controller/px4ctrl/scripts/: 2021-07-29-20-03-55.bag  cali_odom_pub.py  debug_double_filter.py  debug_double_filter2.py  drone_visualize.py
controller/RMUA_controller/px4ctrl/src/: PX4CtrlFSM.cpp  controller.cpp  px4ctrl_node.cpp
controller/airsim_ros_wrapper/: CMakeLists.txt
controller/odom_pub/: package.xml
controller/payload_mpc_controller/: CMakeLists.txt
controller/payload_mpc_controller/model/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  normal_mpc.cpp  normal_mpc_codegen
controller/payload_mpc_controller/model/normal_mpc/: acado_common.h  acado_integrator.c  acado_solver.c
controller/px4_ctrl/odom_pub/: CMakeLists.txt
controller/px4_ctrl/odom_pub/src/: pose_data.cpp
controller/px4ctrl/: CMakeLists.txt
controller/px4ctrl/config/: ctrl_param_fpv.yaml  ctrl_param_fpv_most_accurate.yaml
controller/px4ctrl/include/: PX4CtrlParam.h
controller/px4ctrl/launch/: run_ctrl.launch  run_ctrl_real_world.launch  run_ctrl_sim.launch
controller/px4ctrl/launch/include/: px4_modified.launch
controller/px4ctrl/scripts/: thrust_calibrate.py
controller/px4ctrl/src/: PX4CtrlFSM.cpp  PX4CtrlParam.cpp  px4ctrl_node.cpp
controller/utils/poly_planner/: CMakeLists.txt
controller/utils/poly_planner/config/: poly_planner_params_onboard.yaml
controller/utils/poly_planner/include/fsto/: fsto.h
controller/utils/poly_planner/launch/: rviz.launch
controller/utils/poly_planner/src/: fsto.cpp
fuel_planner/active_perception/: CMakeLists.txt  package.xml
fuel_planner/bspline_opt/: CMakeLists.txt  package.xml
fuel_planner/exploration_manager/: CMakeLists.txt  package.xml
fuel_planner/path_searching/: CMakeLists.txt
fuel_planner/plan_env/: CMakeLists.txt
fuel_planner/plan_manage/: CMakeLists.txt  package.xml
fuel_planner/poly_traj/: CMakeLists.txt
fuel_planner/traj_utils/: CMakeLists.txt  package.xml
fuel_planner/utils/normal_estimator/: CMakeLists.txt  package.xml
fuel_planner/utils/normal_estimator/include/: normal_estimator.hpp
fuel_planner/utils/normal_estimator/src/: normal_estimator.cpp
fuel_planner/utils/stepping_debug/: CMakeLists.txt  package.xml
fuel_planner/utils/stepping_debug/include/: stepping_debug.hpp
fuel_planner/utils/stepping_debug/scripts/: keyboard_trigger.py
fuel_planner/utils/stepping_debug/src/: stepping_debug.cpp
planner/bspline_opt/: CMakeLists.txt
planner/plan_manage/: CMakeLists.txt
uav_utils/quadrotor_msgs/: CMakeLists.txt
(+489 files in other folders)
